Finish adding params to BLAST Job
